--- a/ourproduct2.html
+++ b/ourproduct2.html
@@ -29,41 +29,16 @@
                 <i class="fa fa-bars shoppingcart" aria-hidden="true"></i>
             </div>
         </header>
-		<section class="container-fluid threeCol">
-			<div class="">
-				<div class="row">
-					<div class="col-md-4">
-						<div class='one'>
-							<h3 >White shirt<br> model<br><i class="fa fa-long-arrow-right" aria-hidden="true"></i></h3>
-							<div class="green">
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="two">
-							<h3>White shirt<br> model<br><i class="fa fa-long-arrow-right" aria-hidden="true"></i></h3>
-							<div class="green">
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="three">
-							<h3>White shirt<br> model<br><i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-							</h3>
-							<div class="green">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+        <div class="mainImage">
+    </div>
+		
 
 		<div clsas="container-fluid">
             <div class="row centered">
                 <div class="col-md-4 shirt">
                     <!-- Div 1 -->
                     <div class=" top">
-                        <div class="box"></div>
+                        <div class="box"><i class="fa fa-exchange" aria-hidden="true"></i></div>
                         <div class="blueshirt">
                             <div class="front">
                                 <img src="Pictures/blueshirt.png">
@@ -123,7 +98,7 @@
                 <div class="col-md-4 shirt">
                     <!-- Div 1 -->
                     <div class="top">
-                        <div class="box"></div>
+                        <div class="box"><i class="fa fa-exchange" aria-hidden="true"></i></div>
                         <div class="blueshirt">
                             <div class="front">
                                 <img src="Pictures/pinkshirt.png">
@@ -172,7 +147,7 @@
                     <!-- Div 3 -->
                     <div class="bottom">
                         <div class="left">
-                            <h2>Save my trees</h2>
+                            <h2>Nature Lover</h2>
                         </div>
                         <div class="right">
                             <h2>$19</h2>
@@ -183,7 +158,7 @@
                 <div class="col-md-4 shirt">
                     <!-- Div 1 -->
                     <div class="top">
-                        <div class="box"></div>
+                        <div class="box"><i class="fa fa-exchange" aria-hidden="true"></i></div>
                         <div class="blueshirt">
                             <div class="front">
                                 <img src="Pictures/orangeshirt.png">
@@ -232,20 +207,27 @@
                     <!-- Div 3 -->
                     <div class="bottom">
                         <div class="left">
-                            <h2>Save my trees</h2>
+                            <h2>Homeless</h2>
                         </div>
                         <div class="right">
                             <h2>$39</h2>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 subtotal">
-                    <h3>Subtotal=$<span id="subtotal"></span></h3>
+                <div class="subtotal">
+                <div>
+                	<h5>Subtotal=$<span id="subtotal"></span></h5>
                 </div>
-                <div class="col-md-6 total">
-                	<h3>Total=$<span id="total"></span></h3>
+                <div class="total">
+                	<h5>Total=$<span id="total"></span></h5>
+                </div>
+                    <div id="itemsincart">
+                        <h5><span id="subtotal"></span></h5>
+                    </div>
                 </div>
             </div>
+
+
             <script src="js/main.js" type="text/javascript"></script>
         </div>
 	</body>
